Revised styles.css to provide styling to letters of ransom note, modified index.html to include css grouping

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="word">
         <span class="didDLetter">d</span>
         <span class="didILetter">i</span>
-        <span class="didDTwoLetter">d</span>
+        <span class="didDTwoLetter green-letter">d</span>
       </div>
       <div class="word">
         <span class="theTLetter">t</span>
@@ -87,7 +87,7 @@
       </div>
       <div class="word">
         <span class="wantedWLetter">w</span>
-        <span class="wantedALetter">a</span>
+        <span class="wantedALetter green-letter">a</span>
         <span class="wantedNLetter">n</span>
         <span class="wantedTLetter">t</span>
         <span class="wantedELetter">e</span>
@@ -108,7 +108,7 @@
       </div>
       <div class="word">
         <span class="theirTLetter">t</span>
-        <span class="theirHLetter">h</span>
+        <span class="theirHLetter green-letter" >h</span>
         <span class="theirELetter">e</span>
         <span class="theirILetter">i</span>
         <span class="theirRLetter">r</span>
